force-app/main/default/objects/ssot__DepositAccount__dlm/fields/ssot__DepositAccountType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DepositAccountType__c</fullName>
    <label>Deposit Account Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DepositAccountType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>