force-app/main/default/objects/ssot__DepositAccount__dlm/fields/ssot__hasOverdraftProtection__c.field-meta.xml
<CustomField>
    <fullName>ssot__hasOverdraftProtection__c</fullName>
    <label>Overdraft Protection</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>hasOverdraftProtection</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>