force-app/main/default/objects/ssot__DepositAccount__dlm/fields/ssot__isTaxFreeSavingAccount__c.field-meta.xml
<CustomField>
    <fullName>ssot__isTaxFreeSavingAccount__c</fullName>
    <label>Tax Free Saving Account</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>isTaxFreeSavingAccount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>